--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,40 @@
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
 @import "@ionic/angular/css/palettes/dark.system.css";
+
+
+@font-face {
+    font-family: 'CustomFontName'; /* Replace with your font's name */
+    src: url('assets/fonts/neueMachina/NeueMachina-Ultrabold.otf') format('opentype');
+    font-weight: normal; /* Adjust as needed */
+    font-style: normal;  /* Adjust as needed */
+  }
+
+   .center-div {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    height: 100%;
+  }
+
+
+  .flip-effect {
+  display: inline-block;
+  animation: flipAnimation 0.5s ease-in-out;
+}
+
+@keyframes flipAnimation {
+  0% {
+    transform: rotateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: rotateX(90deg);
+    opacity: 0;
+  }
+  100% {
+    transform: rotateX(0);
+    opacity: 1;
+  }
+}
